<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_margin"
    android:paddingRight="@dimen/activity_margin"
    android:paddingTop="@dimen/activity_margin"
    tools:ignore="ExtraText"><![CDATA[
    tools:context="info.androidhive.sqlite.view.tabs.Tab1Fragment">











    ]]>

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_10"
        android:fontFamily="sans-serif-medium"
        android:lineSpacingExtra="8sp"
        android:text="Nome do alarme"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/lbl_new_note_title"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/note"
        android:layout_width="match_parent"
        android:layout_height="27dp"
        android:background="@android:color/transparent"
        android:gravity="top"
        android:hint="Nome do alarme"
        android:inputType="textCapSentences|textMultiLine"
        android:lines="4"
        android:textColorHint="@color/hint_enter_note"
        android:textSize="@dimen/input_new_note" />

    <CheckBox
        android:id="@+id/isenabled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Ativar/Desativar" />

    <LinearLayout
        android:id="@+id/new_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"/>

    <CheckBox
        android:id="@+id/check_alarm_recorring"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Alarme recorrente" />

    <HorizontalScrollView
        android:id="@+id/menu_recorrente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:visibility="invisible">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/seg"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="100"
                android:text="@string/seg"
                android:textOff="@string/seg"
                android:textOn="@string/seg" />

            <ToggleButton
                android:id="@+id/ter"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="100"
                android:checked="false"
                android:text="@string/ter"
                android:textOff="@string/ter"
                android:textOn="@string/ter" />

            <ToggleButton
                android:id="@+id/qua"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="100"
                android:text="@string/quar"
                android:textOff="@string/quar"
                android:textOn="@string/quar" />

            <ToggleButton
                android:id="@+id/qui"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="100"
                android:text="@string/quin"
                android:textOff="@string/quin"
                android:textOn="@string/quin" />

            <ToggleButton
                android:id="@+id/sex"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="100"
                android:text="@string/sex"
                android:textOff="@string/sex"
                android:textOn="@string/sex" />

            <ToggleButton
                android:id="@+id/sab"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="100"
                android:text="@string/s_b"
                android:textOff="@string/s_b"
                android:textOn="@string/s_b" />

            <ToggleButton
                android:id="@+id/dom"
                android:layout_width="46dp"
                android:layout_height="40dp"
                android:layout_weight="100"
                android:checked="false"
                android:text="@string/dom"
                android:textOff="@string/dom"
                android:textOn="@string/dom" />

        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/time_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="teste"
        android:textColor="#000000"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/syncronize"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:text="Sincronizar" />

        <Button
            android:id="@+id/timer_picker"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="SELECIONAR HORÁRIO" />
    </LinearLayout>

    <TextView
        android:id="@+id/response_arduino"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="resposta"
        android:textColor="#000000"
        android:textSize="18sp" />

</LinearLayout>